<resources>
    <string name="app_name">Scheduler</string>
    <string name="enter_note_date">Enter note date</string>
    <string name="date_pattern">DD.MM.YYYY</string>
    <string name="planner_app_widget">Planner AppWidget</string>
    <string name="query_hint">Поиск</string>
    <string name="welcome">Welcome</string>
    <string name="widget_title">No closest events</string>

    <string name="fragment_login_button_login">Log in</string>
    <string name="fragment_login_etNote_hint">Enter user name</string>
    <string name="fragment_login_text">Введите логин</string>
    <string name="fragment_login_title">Hello</string>

    <string name="fragment_new_note_button_add">Add</string>
    <string name="fragment_new_note_button_edit">Edit</string>
    <string name="fragment_new_note_choose_card_color">Choose card\'s color</string>
    <string name="fragment_new_note_color_not_chosen">Color not chosen. Set default color: White</string>
    <string name="fragment_new_note_etNote_hint">Enter your note</string>
    <string name="fragment_new_note_notificationCheckBoxText">Notification</string>
    <string name="fragment_new_note_title">New note</string>

    <string name="fragment_edit_button_edit">Edit</string>
    <string name="fragment_edit_etNote_hint">Edit your note</string>
    <string name="fragment_edit_notificationCheckBoxText">Notification</string>
    <string name="fragment_edit_title">Edit note</string>

    <string name="fragment_main_add_new_note">Add New Note</string>
    <string name="fragment_main_no_network">Please, check your internet connection</string>
    <string name="fragment_main_cloud_choose_cloud_action">Choose cloud action</string>
    <string name="fragment_main_cloud_dialog">Cloud actions</string>
    <string name="fragment_main_cloud_export">Export notes</string>
    <string name="fragment_main_cloud_export_failed">Cloud export failed</string>
    <string name="fragment_main_cloud_export_no_notes">There\'s no notes for export</string>
    <string name="fragment_main_cloud_export_success">Export successfully done</string>
    <string name="fragment_main_cloud_import">Import notes</string>
    <string name="fragment_main_cloud_import_failed">Cloud import failed</string>
    <string name="fragment_main_cloud_import_success">Import successfully done</string>
    <string name="fragment_main_cloud_import_no_notes">There\'s no clouded notes</string>
    <string name="fragment_main_cloud_import_no_new_notes">There\'s no new notes</string>
    <string name="fragment_main_title">Список дел</string>

    <string name="fragment_settings_action_NO">Nope</string>
    <string name="fragment_settings_action_YES">Yep!</string>
    <string name="fragment_settings_button_change_user_name">Сменить</string>
    <string name="fragment_settings_change_user_name">Сменить имя пользователя</string>
    <string name="fragment_settings_dark_theme">Темная тема</string>
    <string name="fragment_settings_delete_user">Удалить пользователя</string>
    <string name="fragment_settings_delete_user_request_title">Log Out</string>
    <string name="fragment_settings_exit">Выйти</string>
    <string name="fragment_settings_login_request_title">Do you really want to leave?</string>
    <string name="fragment_settings_logout_request_title">Log Out</string>
    <string name="fragment_settings_pick_delete_action">Do you really want to delete user?</string>
    <string name="fragment_settings_title">Учетная запись</string>
    <string name="fragment_settings_user_name">Учетная запись</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
</resources>