<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fragment_settings_title">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/userName"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/fragment_settings_user_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />
    </RadioGroup>

    <EditText
        android:id="@+id/changeName"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:hint="@string/fragment_settings_change_user_name"
        android:inputType="textCapWords"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeGroup"/>

    <Button
        android:id="@+id/btnChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_button_change_user_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeName"/>

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:text="@string/fragment_settings_delete_user"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeName"/>

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/delete_background"
        android:elevation="4dp"
        android:text="@string/fragment_settings_exit"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteUser"/>


</androidx.constraintlayout.widget.ConstraintLayout>