<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2929a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fragment_edit_title"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:text=""
        android:hint="@string/fragment_edit_etNote_hint"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="226dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown= "false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNote"
        android:layout_centerHorizontal="true" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/notificationCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_edit_notificationCheckBoxText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:button="@drawable/checkbox_button"
        android:buttonTint="#2929a3"
        app:layout_constraintEnd_toEndOf="@+id/timePicker"
        app:layout_constraintStart_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/fragment_edit_button_edit"
        app:layout_constraintEnd_toEndOf="@+id/notificationCheck"
        app:layout_constraintStart_toStartOf="@+id/notificationCheck"
        app:layout_constraintTop_toBottomOf="@+id/notificationCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>