<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fragment_new_note_title"
        app:titleTextColor="@color/white">

        <CheckBox
            android:id="@+id/notificationCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/fragment_new_note_notificationCheckBoxText"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:button="@drawable/checkbox_button"
            android:buttonTint="#ffffff"
            android:checked="false" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:hint="@string/fragment_new_note_etNote_hint"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="226dp" />

    <io.techmeskills.an02onl_plannerapp.support.CustomDayPicker
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown= "false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNote"
        android:layout_centerHorizontal="true" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/chooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/fragment_new_note_choose_card_color"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        app:layout_constraintEnd_toEndOf="@id/timePicker"/>

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorSet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="@+id/chooseColor"
        app:layout_constraintTop_toBottomOf="@+id/chooseColor"
        app:layout_constraintEnd_toEndOf="@id/chooseColor"/>

    <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
        android:id="@+id/brightnessSlider"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:selector_BrightnessSlider="@drawable/ic_wheel_dark_slider"
        app:borderColor_BrightnessSlider="@color/grey_dark"
        app:borderSize_BrightnessSlider="5"
        app:layout_constraintStart_toEndOf="@+id/colorSet"
        app:layout_constraintTop_toTopOf="@+id/colorSet"
        app:layout_constraintBottom_toBottomOf="@+id/colorSet"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/purple_main"
        android:text="@string/fragment_new_note_button_add"
        app:layout_constraintEnd_toEndOf="@+id/colorSet"
        app:layout_constraintStart_toStartOf="@+id/colorSet"
        app:layout_constraintTop_toBottomOf="@+id/colorSet" />

</androidx.constraintlayout.widget.ConstraintLayout>